fix z-index of toolbar in schema explorer

--- a/vyne-parent/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
+++ b/vyne-parent/vyne-query-service/src/main/web/src/app/schema-explorer/schema-explorer.component.scss
@@ -8,6 +8,7 @@
 
 mat-toolbar {
   flex: 0 0 96px;
+  z-index: 999;
 }
 
 
